<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/NameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/text_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Occuption">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/text_age"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView4"
            android:hint="@string/enter_your_age"
            android:inputType="textPersonName" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Occuption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/NameLayout">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/text_occupation"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/occuption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView5"
            android:hint="@string/enter_your_occupation"
            android:inputType="textPersonName" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Description"
        android:layout_width="@dimen/descrption_width"
        android:layout_height="@dimen/descrption_height"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Age">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/text_decription"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/description_edit_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:ems="10"
            android:hint="@string/enter_description"
            android:inputType="textPersonName" />

    </RelativeLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:background="@color/background"
        android:text="@string/botton_name"
        android:textColor="@color/button_color"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="@dimen/author_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/author"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>